--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "URL Appender",
-    "description": "Appends '/manage' to the current URL",
+    "description": "Simple Chrome extension automates the process of appending custom text to the end of website URLs",
     "version": "1.0.0",
     "permissions": [
       "activeTab",
@@ -16,4 +16,3 @@
       "service_worker": "background.js" 
     }
   }
-  
