added extension icon and updated manifest

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,10 @@
     
     "background": {
       "service_worker": "background.js" 
+    },
+
+    "icons": {
+      "128": "icon128.png"
     }
+
   }
